# convocation

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
convocation/: __init__.py  config.py  db.py  main.py
convocation/audit/: routes.py
convocation/auth/: deps.py  models.py  routes.py  security.py
convocation/chat/: llm.py  routes.py  tools.py
convocation/content/: renderer.py  routes.py  store.py
convocation/discord/: webhook.py
convocation/export/: routes.py
convocation/notifications/: push.py
convocation/static/: sw.js
convocation/templates/admin/: about-convocation.html  audit.html  base.html  chat.html  history.html  index.html  login.html  settings.html  signup.html
convocation/templates/site/: announcement.html  announcements.html  base.html  event.html  events.html  index.html  members.html  page.html
